--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,10 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.0.9.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
